--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
 
     <p>¿Ha olvidado su nombre de usuario o contraseña?</p>
 
-    <button>Iniciar sesión</button>
+    <button routerLink="/quienes">Iniciar sesión</button>
   </form>
 </div>
 </body>
