--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="/quienes">Quienes somos</a></li>
-        <li><a href="#">Visualización</a></li>
+        <li><a href="/grafica">Visualización</a></li>
         <li><a href="/login">Iniciar sesión</a></li>
         <li>
           <button class="img-text-btn" [routerLink]="['/upload']">
