--- a/src/app/pages/grafica/grafica.component.html
+++ b/src/app/pages/grafica/grafica.component.html
@@ -1,4 +1,25 @@
+<div class="fecha-contenedor">
+  <p>Seleccione el año y el mes:</p>
+  <div class="fecha-formulario">
 
+    <div class="select">
+      <select>
+        <option value="">Año</option>
+        <option value="2022">2022</option>
+        <option value="2021">2021</option>
+        <option value="2020">2020</option>
+      </select>
+    </div>
+
+    <div class="select">
+      <select>
+        <option value="">Mes</option>
+        <option value="Enero">Enero</option>
+        <option value="Febrero">Febrero</option>
+        <option value="Marzo">Marzo</option>
+      </select>
+    </div>
+  </div>
 <div class="contenedor-imagen">
   <img src="../../../assets/images/grafica.png">
 </div>
