--- a/src/app/pages/tipo-calculo/tipo-calculo.component.html
+++ b/src/app/pages/tipo-calculo/tipo-calculo.component.html
@@ -1,1 +1,36 @@
-<p>tipo-calculo works!</p>
+
+  <body class="bodypagina" data-lang="es">
+    <section class="bloque1">
+      <div class="nd">
+        <h2 class="titulo1"> Calculadora de indicadores</h2>
+        <div class="subrayado1"></div>
+      </div>
+    </section>
+    <section class="bloque2">
+      <div class="contenidobloque2">
+        <p class="subtitulo"> Seleccione el metodo que desea calcular:</p>
+        <div class="forma1" routerLink="/upload" title="QuienesSomos" data-target="_blank">
+          <div class="contenidoforma">
+
+              <img class="icono1" src="../../../assets/images/image1.jpeg" alt="" data-image-width="157" data-image-height="117">
+
+
+            <p class="texto1"> Calcular mediante un archivos</p>
+            <p class="contexto1"> Elija si cuenta con un archivo  para realizar el respectivo calculo&nbsp;&nbsp;</p>
+          </div>
+        </div>
+        <div class="forma2" routerLink="/indicadores" title="QuienesSomos" data-target="_blank">
+          <div class="contenidoforma">
+
+              <img class="icono1" src="../../../assets/images/imagen2.jpeg" alt="" data-image-width="168" data-image-height="117">
+
+
+            <p class="texto2"> Calcular mediante un formulario<span style="font-weight: 700;"></span>
+            </p>
+            <p class="contexto1"> Elija si desea ingresar los datos de manera manual  para realizar el respectivo calculo&nbsp;&nbsp;</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+</body>
