--- a/src/app/pages/contactos/contactos.component.html
+++ b/src/app/pages/contactos/contactos.component.html
@@ -1,79 +1,43 @@
-<!DOCTYPE html>
-<html style="font-size: 16px;" lang="es"><head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>Contactos</title>
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-    <meta name="generator" content="Nicepage 5.3.2, nicepage.com">
-    <meta name="referrer" content="origin">
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 
-
-    <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": ""
-}</script>
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Contactos">
-    <meta property="og:type" content="website">
-  </head>
-  <body class="u-body u-xl-mode" data-lang="es">
-    <section class="u-clearfix u-section-1" id="sec-aa95">
-      <img class="u-expanded-width u-image u-image-default u-image-1" src="../../../assets/images/ubicacion.png" alt="" data-image-width="1438" data-image-height="342">
-      <img class="u-border-8 u-border-custom-color-3 u-border-no-bottom u-border-no-left u-border-no-right u-expanded-width u-image u-image-default u-image-2" src="../../../assets/images/municipio.png" alt="" data-image-width="1438" data-image-height="585">
-      <div class="u-container-style u-custom-color-4 u-expanded-width u-group u-shape-rectangle u-group-1">
-        <div class="u-container-layout u-container-layout-1">
-          <h3 class="u-text u-text-custom-color-3 u-text-default u-text-1"> ¿<span style="font-size: 1.5rem; font-weight: 700;">Preguntas</span>?
-          </h3>
-          <p class="u-align-center u-text u-text-2"> Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos: 914-135-288 o completa el formulario a continuación:</p>
-          <h4 class="u-text u-text-custom-color-3 u-text-default u-text-3">Contactos</h4>
-          <div class="u-form u-form-1">
-            <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
-              <div class="u-form-group u-form-name u-label-none">
-                <label for="name-3b9a" class="u-label">Name</label>
-                <input type="text" placeholder="Nombre" id="name-3b9a" name="name" class="u-border-1 u-border-white u-input u-input-rectangle u-radius-15 u-white" required="">
-              </div>
-              <div class="u-form-email u-form-group u-label-none">
-                <label for="email-3b9a" class="u-label">Email</label>
-                <input type="email" placeholder="Correo" id="email-3b9a" name="email" class="u-border-1 u-border-white u-input u-input-rectangle u-radius-15 u-white" required="">
-              </div>
-              <div class="u-form-group u-form-message u-label-none">
-                <label for="message-3b9a" class="u-label">Message</label>
-                <textarea placeholder="Descripcion" rows="4" cols="50" id="message-3b9a" name="message" class="u-border-1 u-border-white u-input u-input-rectangle u-radius-15 u-white" required=""></textarea>
-              </div>
-              <div class="u-align-center u-form-group u-form-submit">
-                <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-3 u-btn-1">Enviar<br>
-                </a>
-                <input type="submit" value="submit" class="u-form-control-hidden">
-              </div>
-              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-              <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-              <input type="hidden" value="" name="recaptchaResponse">
-              <input type="hidden" name="formServices" value="a903cfe3af201509de31a52a4bfaad1c">
-            </form>
-          </div>
-          <p class="u-text u-text-4"> Municipio<br>Ingenieria en Ciencias de la Computacion UTPL. <br>
-            <br>Loja – Ecuador. <br>C/ Marcelino Champagnat, S/N. Edif. Nro. 2. <br>a. <br>
-            <br>Teléfono: 370 1444 – Ext. 2271 <br>Correo electrónico: @utpl.edu.ec
-          </p>
-          <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="../../../assets/images/logo.png" alt="" data-image-width="111" data-image-height="114">
-          <h6 class="u-text u-text-default u-text-5">Municipio&nbsp;<br>Verde
-          </h6>
+  <body class="bodypagina" data-lang="es">
+    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31840.442743146887!2d-79.1917896!3d-4.0090439!
+    3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb37f6776bb51f%3A0x294f7d7b23e36a42!2sSupermaxi%20La%20Pradera!5e0!3m2!1ses-419!2sec!4v1674272127784!5m2!1ses-419!2sec"
+    height="600">
+    </iframe>
+    <section class="bloque">
+      <div class="contenido">
+        <h3 class="titulo1">¿Preguntas?</h3>
+        <h4 class="titulo2">Contactos</h4>
+        <p class="titulo1contenido"> Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos: 914-135-288 o completa el formulario a continuación:</p>
+        <p class="titulo2contenido"> Municipio<br>Ingenieria en Ciencias de la Computacion UTPL. <br>
+          <br>Loja – Ecuador. <br>C/ Marcelino Champagnat, S/N. Edif. Nro. 2. <br>a. <br>
+          <br>Teléfono: 370 1444 – Ext. 2271 <br>Correo electrónico: @utpl.edu.ec
+        </p>
+        <div class="formulario">
+          <form action="" class="contenidoformulario" style="padding: 10px" source="email" name="form">
+            <div class="secciones">
+              <label for="name" class="seccion">Name</label>
+              <input type="text" placeholder="Nombre" id="name" name="name" class="cuadro" required="">
+            </div>
+            <div class="secciones">
+              <label for="email" class="seccion">Email</label>
+              <input type="email" placeholder="Correo" id="email" name="email" class="cuadro" required="">
+            </div>
+            <div class="secciones">
+              <label for="message" class="seccion">Message</label>
+              <textarea placeholder="Descripcion" rows="4" cols="50" id="message" name="message" class="cuadro" required=""></textarea>
+            </div>
+            <div class="boton">
+              <a href="#" class="boton1">Enviar<br>
+              </a>
+              <input type="submit" value="submit" class="textoboton">
+            </div>
+          </form>
         </div>
+        <img class="logo" src="../../../assets/images/logo.png" alt="" data-image-width="111" data-image-height="114">
+        <h6 class="logotexto">Municipio<br>Verde
+        </h6>
       </div>
     </section>
 
-
-
-    <section class="u-backlink u-clearfix u-grey-80">
-
-      <a class="u-link" href="" target="_blank">
-        <span>Municipio verde</span>
-      </a>.
-    </section>
-
-</body></html>
+</body>
