--- a/src/app/pages/quienes/quienes.component.html
+++ b/src/app/pages/quienes/quienes.component.html
@@ -1,98 +1,65 @@
-
-  <body class="u-body u-xl-mode" data-lang="es">
-    <section class="u-clearfix u-section-1" id="sec-aac6">
-      <h2 class="u-text u-text-custom-color-1 u-text-default u-text-1">Trabajamos para ti </h2>
-      <div class="u-border-3 u-border-custom-color-2 u-line u-line-horizontal u-line-1"></div>
-      <img class="u-image u-image-default u-image-1" src="../../../assets/images/trabajamos.png" alt="" data-image-width="620" data-image-height="342">
-      <h4 class="u-align-center u-text u-text-custom-color-1 u-text-2">¿Como inicio todo? </h4>
-      <div class="u-border-3 u-border-custom-color-2 u-line u-line-horizontal u-line-2"></div>
-      <p class="u-align-center u-text u-text-3"> A partir de una revisión histórica deltratamiento dado a la institución en las diferentes constituciones que han regidola vida republicana de proyectos multidisciplinarios, donde investigadores, estudiantes, docentes y público en general puedan proponer, crear y explorar las distintas formas de experimentación y aprendizaje colaborativo, haciendo uso de las herramientas y tecnología implementadas, generando un espacio de encuentro de experimentación con la ciudadanía.</p>
-      <a href="https://nicepage.one" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-palette-1-light-1 u-radius-6 u-btn-1">Conoce más</a>
-      <div class="u-border-9 u-border-custom-color-2 u-border-no-left u-border-no-right u-container-style u-custom-color-6 u-expanded-width u-group u-shape-rectangle u-group-1">
-        <div class="u-container-layout u-container-layout-1">
-          <h3 class="u-text u-text-default u-text-4">Conoce nuestro equipo de trabajo</h3>
-          <div class="u-border-3 u-border-custom-color-3 u-line u-line-horizontal u-line-3"></div>
-          <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="../../../assets/images/persona1.png" alt="" data-image-width="143" data-image-height="130">
-          <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="../../../assets/images/persona2.png" alt="" data-image-width="136" data-image-height="135">
-          <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-4" src="../../../assets/images/persona1.png" alt="" data-image-width="143" data-image-height="130">
-          <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-5" src="../../../assets/images/persona2.png" alt="" data-image-width="136" data-image-height="135">
-          <h5 class="u-text u-text-default u-text-5">Nombres y apellidos</h5>
-          <h5 class="u-text u-text-default u-text-6">Nombres y apellidos</h5>
-          <h5 class="u-text u-text-default u-text-7">Nombres y apellidos</h5>
-          <p class="u-text u-text-default u-text-8">Cargo</p>
-          <h5 class="u-text u-text-default u-text-9">Nombres y apellidos</h5>
-          <p class="u-text u-text-default u-text-10">Cargo</p>
-          <p class="u-text u-text-default u-text-11">Cargo</p>
-          <p class="u-text u-text-default u-text-12">Cargo</p><span class="u-icon u-text-custom-color-3 u-icon-1" data-href="https://www.loja.gob.ec/"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 55 55" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-203a"></use></svg><svg class="u-svg-content" viewBox="0 0 55 55" x="0px" y="0px" id="svg-203a" style="enable-background:new 0 0 55 55;"><path d="M55,27.5C55,12.337,42.663,0,27.5,0S0,12.337,0,27.5c0,8.009,3.444,15.228,8.926,20.258l-0.026,0.023l0.892,0.752
-	c0.058,0.049,0.121,0.089,0.179,0.137c0.474,0.393,0.965,0.766,1.465,1.127c0.162,0.117,0.324,0.234,0.489,0.348
-	c0.534,0.368,1.082,0.717,1.642,1.048c0.122,0.072,0.245,0.142,0.368,0.212c0.613,0.349,1.239,0.678,1.88,0.98
-	c0.047,0.022,0.095,0.042,0.142,0.064c2.089,0.971,4.319,1.684,6.651,2.105c0.061,0.011,0.122,0.022,0.184,0.033
-	c0.724,0.125,1.456,0.225,2.197,0.292c0.09,0.008,0.18,0.013,0.271,0.021C25.998,54.961,26.744,55,27.5,55
-	c0.749,0,1.488-0.039,2.222-0.098c0.093-0.008,0.186-0.013,0.279-0.021c0.735-0.067,1.461-0.164,2.178-0.287
-	c0.062-0.011,0.125-0.022,0.187-0.034c2.297-0.412,4.495-1.109,6.557-2.055c0.076-0.035,0.153-0.068,0.229-0.104
-	c0.617-0.29,1.22-0.603,1.811-0.936c0.147-0.083,0.293-0.167,0.439-0.253c0.538-0.317,1.067-0.648,1.581-1
-	c0.185-0.126,0.366-0.259,0.549-0.391c0.439-0.316,0.87-0.642,1.289-0.983c0.093-0.075,0.193-0.14,0.284-0.217l0.915-0.764
-	l-0.027-0.023C51.523,42.802,55,35.55,55,27.5z M2,27.5C2,13.439,13.439,2,27.5,2S53,13.439,53,27.5
-	c0,7.577-3.325,14.389-8.589,19.063c-0.294-0.203-0.59-0.385-0.893-0.537l-8.467-4.233c-0.76-0.38-1.232-1.144-1.232-1.993v-2.957
-	c0.196-0.242,0.403-0.516,0.617-0.817c1.096-1.548,1.975-3.27,2.616-5.123c1.267-0.602,2.085-1.864,2.085-3.289v-3.545
-	c0-0.867-0.318-1.708-0.887-2.369v-4.667c0.052-0.52,0.236-3.448-1.883-5.864C34.524,9.065,31.541,8,27.5,8
-	s-7.024,1.065-8.867,3.168c-2.119,2.416-1.935,5.346-1.883,5.864v4.667c-0.568,0.661-0.887,1.502-0.887,2.369v3.545
-	c0,1.101,0.494,2.128,1.34,2.821c0.81,3.173,2.477,5.575,3.093,6.389v2.894c0,0.816-0.445,1.566-1.162,1.958l-7.907,4.313
-	c-0.252,0.137-0.502,0.297-0.752,0.476C5.276,41.792,2,35.022,2,27.5z"></path></svg></span><span class="u-icon u-text-custom-color-3 u-icon-2" data-href="https://www.loja.gob.ec/"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 55 55" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9a96"></use></svg><svg class="u-svg-content" viewBox="0 0 55 55" x="0px" y="0px" id="svg-9a96" style="enable-background:new 0 0 55 55;"><path d="M55,27.5C55,12.337,42.663,0,27.5,0S0,12.337,0,27.5c0,8.009,3.444,15.228,8.926,20.258l-0.026,0.023l0.892,0.752
-	c0.058,0.049,0.121,0.089,0.179,0.137c0.474,0.393,0.965,0.766,1.465,1.127c0.162,0.117,0.324,0.234,0.489,0.348
-	c0.534,0.368,1.082,0.717,1.642,1.048c0.122,0.072,0.245,0.142,0.368,0.212c0.613,0.349,1.239,0.678,1.88,0.98
-	c0.047,0.022,0.095,0.042,0.142,0.064c2.089,0.971,4.319,1.684,6.651,2.105c0.061,0.011,0.122,0.022,0.184,0.033
-	c0.724,0.125,1.456,0.225,2.197,0.292c0.09,0.008,0.18,0.013,0.271,0.021C25.998,54.961,26.744,55,27.5,55
-	c0.749,0,1.488-0.039,2.222-0.098c0.093-0.008,0.186-0.013,0.279-0.021c0.735-0.067,1.461-0.164,2.178-0.287
-	c0.062-0.011,0.125-0.022,0.187-0.034c2.297-0.412,4.495-1.109,6.557-2.055c0.076-0.035,0.153-0.068,0.229-0.104
-	c0.617-0.29,1.22-0.603,1.811-0.936c0.147-0.083,0.293-0.167,0.439-0.253c0.538-0.317,1.067-0.648,1.581-1
-	c0.185-0.126,0.366-0.259,0.549-0.391c0.439-0.316,0.87-0.642,1.289-0.983c0.093-0.075,0.193-0.14,0.284-0.217l0.915-0.764
-	l-0.027-0.023C51.523,42.802,55,35.55,55,27.5z M2,27.5C2,13.439,13.439,2,27.5,2S53,13.439,53,27.5
-	c0,7.577-3.325,14.389-8.589,19.063c-0.294-0.203-0.59-0.385-0.893-0.537l-8.467-4.233c-0.76-0.38-1.232-1.144-1.232-1.993v-2.957
-	c0.196-0.242,0.403-0.516,0.617-0.817c1.096-1.548,1.975-3.27,2.616-5.123c1.267-0.602,2.085-1.864,2.085-3.289v-3.545
-	c0-0.867-0.318-1.708-0.887-2.369v-4.667c0.052-0.52,0.236-3.448-1.883-5.864C34.524,9.065,31.541,8,27.5,8
-	s-7.024,1.065-8.867,3.168c-2.119,2.416-1.935,5.346-1.883,5.864v4.667c-0.568,0.661-0.887,1.502-0.887,2.369v3.545
-	c0,1.101,0.494,2.128,1.34,2.821c0.81,3.173,2.477,5.575,3.093,6.389v2.894c0,0.816-0.445,1.566-1.162,1.958l-7.907,4.313
-	c-0.252,0.137-0.502,0.297-0.752,0.476C5.276,41.792,2,35.022,2,27.5z"></path></svg></span><span class="u-icon u-text-custom-color-3 u-icon-3" data-href="https://www.loja.gob.ec/"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 55 55" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-92b2"></use></svg><svg class="u-svg-content" viewBox="0 0 55 55" x="0px" y="0px" id="svg-92b2" style="enable-background:new 0 0 55 55;"><path d="M55,27.5C55,12.337,42.663,0,27.5,0S0,12.337,0,27.5c0,8.009,3.444,15.228,8.926,20.258l-0.026,0.023l0.892,0.752
-	c0.058,0.049,0.121,0.089,0.179,0.137c0.474,0.393,0.965,0.766,1.465,1.127c0.162,0.117,0.324,0.234,0.489,0.348
-	c0.534,0.368,1.082,0.717,1.642,1.048c0.122,0.072,0.245,0.142,0.368,0.212c0.613,0.349,1.239,0.678,1.88,0.98
-	c0.047,0.022,0.095,0.042,0.142,0.064c2.089,0.971,4.319,1.684,6.651,2.105c0.061,0.011,0.122,0.022,0.184,0.033
-	c0.724,0.125,1.456,0.225,2.197,0.292c0.09,0.008,0.18,0.013,0.271,0.021C25.998,54.961,26.744,55,27.5,55
-	c0.749,0,1.488-0.039,2.222-0.098c0.093-0.008,0.186-0.013,0.279-0.021c0.735-0.067,1.461-0.164,2.178-0.287
-	c0.062-0.011,0.125-0.022,0.187-0.034c2.297-0.412,4.495-1.109,6.557-2.055c0.076-0.035,0.153-0.068,0.229-0.104
-	c0.617-0.29,1.22-0.603,1.811-0.936c0.147-0.083,0.293-0.167,0.439-0.253c0.538-0.317,1.067-0.648,1.581-1
-	c0.185-0.126,0.366-0.259,0.549-0.391c0.439-0.316,0.87-0.642,1.289-0.983c0.093-0.075,0.193-0.14,0.284-0.217l0.915-0.764
-	l-0.027-0.023C51.523,42.802,55,35.55,55,27.5z M2,27.5C2,13.439,13.439,2,27.5,2S53,13.439,53,27.5
-	c0,7.577-3.325,14.389-8.589,19.063c-0.294-0.203-0.59-0.385-0.893-0.537l-8.467-4.233c-0.76-0.38-1.232-1.144-1.232-1.993v-2.957
-	c0.196-0.242,0.403-0.516,0.617-0.817c1.096-1.548,1.975-3.27,2.616-5.123c1.267-0.602,2.085-1.864,2.085-3.289v-3.545
-	c0-0.867-0.318-1.708-0.887-2.369v-4.667c0.052-0.52,0.236-3.448-1.883-5.864C34.524,9.065,31.541,8,27.5,8
-	s-7.024,1.065-8.867,3.168c-2.119,2.416-1.935,5.346-1.883,5.864v4.667c-0.568,0.661-0.887,1.502-0.887,2.369v3.545
-	c0,1.101,0.494,2.128,1.34,2.821c0.81,3.173,2.477,5.575,3.093,6.389v2.894c0,0.816-0.445,1.566-1.162,1.958l-7.907,4.313
-	c-0.252,0.137-0.502,0.297-0.752,0.476C5.276,41.792,2,35.022,2,27.5z"></path></svg></span><span class="u-icon u-text-custom-color-3 u-icon-4" data-href="https://www.loja.gob.ec/"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 55 55" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-98fa"></use></svg><svg class="u-svg-content" viewBox="0 0 55 55" x="0px" y="0px" id="svg-98fa" style="enable-background:new 0 0 55 55;"><path d="M55,27.5C55,12.337,42.663,0,27.5,0S0,12.337,0,27.5c0,8.009,3.444,15.228,8.926,20.258l-0.026,0.023l0.892,0.752
-	c0.058,0.049,0.121,0.089,0.179,0.137c0.474,0.393,0.965,0.766,1.465,1.127c0.162,0.117,0.324,0.234,0.489,0.348
-	c0.534,0.368,1.082,0.717,1.642,1.048c0.122,0.072,0.245,0.142,0.368,0.212c0.613,0.349,1.239,0.678,1.88,0.98
-	c0.047,0.022,0.095,0.042,0.142,0.064c2.089,0.971,4.319,1.684,6.651,2.105c0.061,0.011,0.122,0.022,0.184,0.033
-	c0.724,0.125,1.456,0.225,2.197,0.292c0.09,0.008,0.18,0.013,0.271,0.021C25.998,54.961,26.744,55,27.5,55
-	c0.749,0,1.488-0.039,2.222-0.098c0.093-0.008,0.186-0.013,0.279-0.021c0.735-0.067,1.461-0.164,2.178-0.287
-	c0.062-0.011,0.125-0.022,0.187-0.034c2.297-0.412,4.495-1.109,6.557-2.055c0.076-0.035,0.153-0.068,0.229-0.104
-	c0.617-0.29,1.22-0.603,1.811-0.936c0.147-0.083,0.293-0.167,0.439-0.253c0.538-0.317,1.067-0.648,1.581-1
-	c0.185-0.126,0.366-0.259,0.549-0.391c0.439-0.316,0.87-0.642,1.289-0.983c0.093-0.075,0.193-0.14,0.284-0.217l0.915-0.764
-	l-0.027-0.023C51.523,42.802,55,35.55,55,27.5z M2,27.5C2,13.439,13.439,2,27.5,2S53,13.439,53,27.5
-	c0,7.577-3.325,14.389-8.589,19.063c-0.294-0.203-0.59-0.385-0.893-0.537l-8.467-4.233c-0.76-0.38-1.232-1.144-1.232-1.993v-2.957
-	c0.196-0.242,0.403-0.516,0.617-0.817c1.096-1.548,1.975-3.27,2.616-5.123c1.267-0.602,2.085-1.864,2.085-3.289v-3.545
-	c0-0.867-0.318-1.708-0.887-2.369v-4.667c0.052-0.52,0.236-3.448-1.883-5.864C34.524,9.065,31.541,8,27.5,8
-	s-7.024,1.065-8.867,3.168c-2.119,2.416-1.935,5.346-1.883,5.864v4.667c-0.568,0.661-0.887,1.502-0.887,2.369v3.545
-	c0,1.101,0.494,2.128,1.34,2.821c0.81,3.173,2.477,5.575,3.093,6.389v2.894c0,0.816-0.445,1.566-1.162,1.958l-7.907,4.313
-	c-0.252,0.137-0.502,0.297-0.752,0.476C5.276,41.792,2,35.022,2,27.5z"></path></svg></span>
-          <p class="u-text u-text-default u-text-13">CV</p>
-          <p class="u-text u-text-default u-text-14">CV</p>
-          <p class="u-text u-text-default u-text-15">CV</p>
-          <p class="u-text u-text-default u-text-16">CV</p>
+<body class="bodypagina" data-lang="es">
+    <section class="bloque1">
+      <h2 class="titulo">Trabajamos para ti </h2>
+      <div class="subrayado1"></div>
+      <img class="imagen1" src="../../../assets/images/trabajamos.png" alt="" data-image-width="620" data-image-height="342">
+      <h4 class="subtitulo">¿Como inicio todo? </h4>
+      <div class="subrayado2"></div>
+      <p class="parrafo"> A partir de una revisión histórica deltratamiento dado a la institución en las diferentes constituciones
+        que han regidola vida republicana de proyectos multidisciplinarios, donde investigadores, estudiantes, docentes y público
+        en general puedan proponer, crear y explorar las distintas formas de experimentación y aprendizaje colaborativo, haciendo
+        uso de las herramientas y tecnología implementadas, generando un espacio de encuentro de experimentación con la ciudadanía.</p>
+      <a class="boton" href="Contactos.html">Conoce más</a>
+  </section>
+  <section class="bloque2">
+    <div class="recuadro">
+      <h3 class="titulo1"> Conoce nuestro equipo de trabajo</h3>
+      <div class="subrayado3"></div>
+      <div class="listado">
+        <div class="secciones">
+          <div class="seccion">
+            <div class="contenido">
+              <img class="personal" src="../../../assets/images/persona1.png" alt="" data-image-width="143" data-image-height="130">
+              <p>Nombres Apellidos</p>
+              <p>Cargo</p>
+              <p class="botonescontacto">
+                <a class="contacto" href="Contactos.html">CV</a>
+              </p>
+            </div>
+          </div>
+          <div class="seccion">
+            <div class="contenido">
+              <img class="personal" src="../../../assets/images/persona2.png" alt="" data-image-width="136" data-image-height="135">
+              <p> Nombres Apellidos</p>
+              <p> Cargo</p>
+              <p class="botonescontacto">
+                <a class="contacto" href="Contactos.html"> CV</a>
+              </p>
+            </div>
+          </div>
+          <div class="seccion">
+            <div class="contenido">
+              <img class="personal" src="../../../assets/images/persona1.png" alt="" data-image-width="143" data-image-height="130">
+              <p> Nombres Apellidos</p>
+              <p> Cargo</p>
+              <p class="botonescontacto">
+                <a class="contacto" href="Contactos.html"> CV</a>
+              </p>
+            </div>
+          </div>
+          <div class="seccion">
+            <div class="contenido">
+              <img class="personal" src="../../../assets/images/persona2.png" alt="" data-image-width="143" data-image-height="130">
+              <p> Nombres Apellidos</p>
+              <p> Cargo</p>
+              <p class="botonescontacto">
+                <a class="contacto" href="Contactos.html"> CV</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
-
-
-
+    </div>
+  </section>
 
 </body>
