--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,8 +13,9 @@
         <li><a href="/quienes">Quienes somos</a></li>
         <li><a href="/grafica">Visualización</a></li>
         <li><a href="/login">Iniciar sesión</a></li>
+        <li><a href="/contactos">Contactos</a></li>
         <li>
-          <button class="img-text-btn" [routerLink]="['/upload']">
+          <button class="img-text-btn" [routerLink]="['/tipo-calculo']">
             <img src="./assets/images/empresa.png" alt="Imagen">
             <span class="palabra1">Calcular indices</span>
           </button>
